# minhook

./: CMakeLists.txt  Toolchain-i686-mingw32.cmake  Toolchain-x86_64-w64-mingw32.cmake
dll_resources/: MinHook.def  dllmain.cpp
include/: MinHook.h
src/: buffer.cpp  export.cpp  hook.cpp  thread.cpp  trampoline.cpp
